Deprecate: Nested variable definitions to align rules

--- a/website/app/[locale]/(root)/docs/variables/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/variables/components/Overview.mdx
@@ -3,12 +3,10 @@ import { variables } from '@master/css'
 
 export default {
     variables: {
-        font: {
-            family: {
-                sans: 'Inter'
-            }
+        'font-family': {
+            sans: 'Inter'
          },
-        section: { md: 1024 },
+        sizing: { md: 1024 },
         spacing: { x1: 2 },
         primary: '#000000'
     }
