--- a/website/app/[locale]/(root)/docs/fonts/content.mdx
+++ b/website/app/[locale]/(root)/docs/fonts/content.mdx
@@ -1,4 +1,4 @@
-## Overview [sr-only]
+## Default [sr-only]
 <Demo $py={0}>
     <DemoPanel className="flex flex:col gap:30">
         <div className="w:full">
@@ -15,35 +15,40 @@
         </div>
     </DemoPanel>
 </Demo>
-The default provides three neutral [font family](/docs/font-family) variables, `sans`, `serif`, and `mono`, to facilitate your use as fallbacks when adding custom fonts.
+There are three default [font family](/docs/font-family) variables, `sans`, `serif`, and `mono`, to facilitate your use as fallbacks when adding custom fonts.
+
+By default, `font-family` variables are inherited by the <Heirs /> rules.
+<details>
+    <summary>View the default variables</summary>
+    <div>
+        <Code lang="js">
+            {JSON.stringify(require('../../../../../../packages/css/src/config/variables').default['font-family'], null, 4)}
+        </Code>
+    </div>
+</details>
 
 ---
 
 ## Basic usage
-### Add custom fonts
-Define [variables](/docs/variables) to use font tokens from a single source. For example, add `Inter` as the general font and `Fira Code` as the code font.
+### Add a font
+Use font tokens from a single source by defining [variables](/docs/variables). For example, add `Inter` as the general font and `Fira Code` as the code font.
 ```js name=master.css.js
 import { variables } from '@master/css'
 
 export default {
     variables: {
-+        font: {
-+            family: {
-+               sans: ['Inter', ...variables.font.family.sans],
-+               mono: ['Fira Code', ...variables.font.family.mono]
-+            }
-+        }
+        'font-family': {
++            sans: ['Inter', ...variables['font-family'].sans],
++            mono: ['Fira Code', ...variables['font-family'].mono]
+        }
     }
 }
 ```
-By default, `font.family` variables are inherited by the `font-family` and `font` rules.
 
-### Apply custom fonts
-Apply the defined font variables using the [font family](/docs/font-family) syntax. For example, presetting the global fonts in `html <body>`:
+### Apply the added font
+Apply the defined font variables using the syntax of the [font family](/docs/font-family). For example, presetting the global fonts in `html <body>`:
 ```html
-<body class="**font:sans** **font:mono_:where(code,pre)** font-feature:'salt'">
-    …
-</body>
+<body class="**font:sans** **font:mono_:where(code,pre)** font-feature:'salt'">…</body>
 ```
 
 ---
