--- a/website/app/[locale]/(root)/docs/fonts/content.mdx
+++ b/website/app/[locale]/(root)/docs/fonts/content.mdx
@@ -31,7 +31,7 @@ By default, `font-family` variables are inherited by the <Heirs /> rules.
 
 ## Basic usage
 ### Add a font
-Use font tokens from a single source by defining [variables](/docs/variables). For example, add `Inter` as the general font and `Fira Code` as the code font.
+Add a font token by defining [variables](/docs/variables). For example, add `Inter` as the general font and `Fira Code` as the code font.
 ```js name=master.css.js
 import { variables } from '@master/css'
 
