--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -25,7 +25,7 @@ Finalizing these documents allows us to verify the rationality, ease of use, and
 <table>
     <Documents category='Getting Started' first />
     <Documents category='Installation' />
-    <Documents category='Core Syntax' />
+    <Documents category='Syntax Tutorial' />
     <Documents category='Fundamentals' />
     <Documents category='Production Optimization' />
     <Documents category='Customization' />
