--- a/website/app/[locale]/(root)/docs/box-sizes/content.mdx
+++ b/website/app/[locale]/(root)/docs/box-sizes/content.mdx
@@ -5,7 +5,7 @@ Master CSS provides practical container/viewport sizes, `4xs` to `4xl`, and alia
     <summary>View the default variables</summary>
     <div>
         <Code lang="js">
-            {JSON.stringify(require('../../../../../../packages/css/src/config/variables').default['box-size'], null, 4)}
+            {JSON.stringify(require('@master/css').variables['box-size'], null, 4)}
         </Code>
     </div>
 </details>
