--- a/website/app/[locale]/(root)/docs/fonts/content.mdx
+++ b/website/app/[locale]/(root)/docs/fonts/content.mdx
@@ -21,7 +21,7 @@ There are three default [font family](/docs/font-family) variables, `sans`, `ser
     <summary>View the default variables</summary>
     <div>
         <Code lang="js">
-            {JSON.stringify(require('../../../../../../packages/css/src/config/variables').default['font-family'], null, 4)}
+            {JSON.stringify(require('@master/css').variables, null, 4)}
         </Code>
     </div>
 </details>
