--- a/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
@@ -70,7 +70,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
         </StepL>
         <StepR>
             ```install
-            **@master/css.react@beta** **@master/css-renderer** **@master/css-server**
+            **@master/css.react@beta** **@master/css-renderer@beta** **@master/css-server@beta**
             ```
         </StepR>
     </Step>
