--- a/website/app/[locale]/(root)/docs/comparison/_page.mdx
+++ b/website/app/[locale]/(root)/docs/comparison/_page.mdx
@@ -8,7 +8,7 @@ export default function Why({ t }: any) {
     return (
         <>
             {t(meta.description)}
-            <DocTable className="font:14_p overflow-x:auto {px:30;mx:-30}@<sm" noScroll>
+            <DocTable className="font:14_p overflow-x:auto {px:30;mx:-30}@<sm">
                 <thead>
                     <tr>
                         <th></th>
