--- a/website/app/[locale]/(root)/docs/font-family/content.mdx
+++ b/website/app/[locale]/(root)/docs/font-family/content.mdx
@@ -59,10 +59,8 @@ Is it not very kind to use `\00a0` in markup?
 /** @type {import('@master/css').Config} */
 export default {
     variables: {
-        font: {
-            family: {
-+               'open-sans': 'Open Sans'
-            }
+        'font-family': {
++           'open-sans': 'Open Sans'
         }
     }
 }
