--- a/website/app/[locale]/(root)/docs/rendering-modes/content.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/content.mdx
@@ -1,4 +1,4 @@
-<DocTable className="{text:14;white-space:pre-wrap;font:regular}_p  overflow-x:auto {px:30;mx:-30}@<sm table-layout:fixed_table" noScroll>
+<DocTable className="{text:14;white-space:pre-wrap;font:regular}_p  overflow-x:auto {px:30;mx:-30}@<sm table-layout:fixed_table">
     <thead>
         <tr>
             <th className="w:calc(50vw-1.5rem) w:33.3%@sm">
