--- a/website/app/[locale]/(root)/docs/variables/content.mdx
+++ b/website/app/[locale]/(root)/docs/variables/content.mdx
@@ -1,7 +1,7 @@
 ## Overview [sr-only]
 <Overview />
 
-Master CSS provides useful variable groups for various inheritance behaviors such as [colors](/docs/colors), [spacings](/docs/spacings), [fonts](/docs/fonts), and [box sizes](/docs/box) by default. You can start implementing your design tokens from these topics.
+Master CSS provides useful variable groups for various inheritance behaviors such as [colors](/docs/colors), [spacing](/docs/spacing), [fonts](/docs/fonts), and [box sizes](/docs/box-sizes) by default. You can start implementing your design tokens from these topics.
 
 This guide primarily explains the functionality of variables.
 
