--- a/website/app/[locale]/(root)/docs/spacing/content.mdx
+++ b/website/app/[locale]/(root)/docs/spacing/content.mdx
@@ -1,9 +1,9 @@
 ## Using spacing scale [sr-only]
 The spacing system is constructed using a [base unit](/docs/configuration#baseunit) of **4 pixels**. For visual consistency, you can use the multiplier unit `x` to apply spacing with the same scale.
 ```html
-<div class="**m:1x**">4px, margin: 0.25rem</div>
-<div class="**p:2x**">8px, padding: 0.5rem</div>
-<div class="**gap:3x**">12px, gap: 0.75rem</div>
+<div class="m:**1x**">4px, margin: 0.25rem</div>
+<div class="p:**2x**">8px, padding: 0.5rem</div>
+<div class="gap:**3x**">12px, gap: 0.75rem</div>
 ...
 ```
 <Reference />
