Remove unused animation component and update documentation

--- a/website/app/[locale]/(root)/docs/animations/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/animations/components/Overview.mdx
@@ -12,7 +12,7 @@ export default {
     }
 }
 ```
-Apply the custom animation using [animation syntax](/docs/animation):
+Apply the custom animation using [animation](/docs/animation) syntax:
 ```html
 <div class="**@slide-in-up|.5s**"></div>
 ```
