--- a/website/app/[locale]/(root)/docs/box-sizes/content.mdx
+++ b/website/app/[locale]/(root)/docs/box-sizes/content.mdx
@@ -1,4 +1,4 @@
-## Using spacing scale [sr-only]
+## Using size scale [sr-only]
 The box size system is constructed using a [base unit](/docs/configuration#baseunit) of **4 pixels**. For visual consistency, you can use the multiplier unit `x` to apply box sizes with the same scale.
 ```html
 <div class="w:**8x**">32px, width: 2rem</div>
