--- a/website/app/[locale]/(root)/docs/rendering-modes/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/runtime-rendering/content.mdx
@@ -142,5 +142,5 @@ console.log(sheet.cssRules)
 
 ## Further Reading
 
-- [Avoid flash of unstyled content](/docs/flash-of-unstyled-content)
+- [Prevent flash of unstyled content](/docs/flash-of-unstyled-content)
 - [Preload critical resources](/docs/preload-critical-resources)
