--- a/website/app/[locale]/(root)/docs/animations/content.mdx
+++ b/website/app/[locale]/(root)/docs/animations/content.mdx
@@ -1,18 +1,16 @@
-## Customization [sr-only]
+## Overview [sr-only]
 <Overview />
-
-Master CSS keyframes work by parsing animation-related syntax and generating only the keyframe CSS rules used into a CSS file or running stylesheet.
-
-This means that even thousands of pre-defined keyframes are not included in the final stylesheet like traditional CSS － **it's generated on demand.**
-
----
-
-## Default
-To preview the actual effect of all keyframes, see the [animation](/docs/animation) documentation:
-<Default />
+To preview the visual effect of all animations, see the [animation](/docs/animation) documentation.
+<details>
+    <summary>View the default animations</summary>
+    <div>
+        <Code lang="js">
+            {JSON.stringify(require('@master/css').animations, null, 4)}
+        </Code>
+    </div>
+</details>
 
 ---
 
 ## Future
-
 - The preset package `@master/animate.css` for [animate.style](https://animate.style) [#129](https://github.com/master-co/css/issues/219)
