--- a/website/app/[locale]/(root)/docs/installation/angular/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/angular/runtime-rendering/content.mdx
@@ -81,17 +81,17 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
     <Step $row>
         <StepL>
             ### <StepNum />Set up CSS runtime engine
-            Import `master.css.ts` into the entry file `src/main.ts` to enable the runtime engine.  
+            Import `master.css.ts` into the entry file `src/main.ts` to enable the runtime engine.
         </StepL>
         <StepR>
             ```ts name=src/main.ts
-               import { platformBrowserDynamic } from '@angular/platform-browser-dynamic';  
+               import { platformBrowserDynamic } from '@angular/platform-browser-dynamic';
                import { AppModule } from './app/app.module';
             +   import { initRuntime } from '@master/css';
             +   import config from '../master.css';
-            
+
             +   initRuntime(config);
-            
+
                platformBrowserDynamic().bootstrapModule(AppModule)
                    .catch(err => console.error(err));
             ```
@@ -99,7 +99,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Avoid flash of unstyled content
+            ### <StepNum />Prevent flash of unstyled content
             Add `css display: 'none'` in `html <html>` to avoid [FOUC](https://en.wikipedia.org/wiki/Flash_of_unstyled_content) caused by the runtime engine not yet injecting CSS rules.
         </StepL>
         <StepR>
