--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
@@ -93,7 +93,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Avoid flash of unstyled content
+            ### <StepNum />Prevent flash of unstyled content
             Configure `nuxt.config.js` and add `css display: 'none'` in `html <html>` to avoid [FOUC](https://en.wikipedia.org/wiki/Flash_of_unstyled_content) caused by the runtime engine not yet injecting CSS rules.
         </StepL>
         <StepR>
